ARROW-1004: [Python] Add conversions for numpy object arrays with integers and floats

Author: Wes McKinney <wes.mckinney@twosigma.com>

Closes #681 from wesm/ARROW-1004 and squashes the following commits:

9e0b2eae [Wes McKinney] Code review comments
45f1ecb9 [Wes McKinney] Fixes for manylinux1
4e4c7529 [Wes McKinney] Add conversions for numpy object arrays with integers and floats